# QT-C-APP

YouTube_Summarizer_App/: CMakeLists.txt  Cmake-sc.sh  Qmake.sh  YouTube_Summarizer_App  mainwindow.cpp  mainwindow.h  mainwindow.ui
YouTube_Summarizer_App/backend/: Cargo.toml
YouTube_Summarizer_App/backend/src/: main.rs
calculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
